Closed
Bug 1185416
Opened 7 years ago
Closed 7 years ago
Don't stop AudioSink prematurely when decoding is completed
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla42
Tracking | Status | |
---|---|---|
firefox42 | --- | fixed |
People
(Reporter: jwwang, Assigned: jwwang)
References
Details
Attachments
(1 file)
1.37 KB,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
This bug addresses bug 1184742 comment 0.
Assignee | ||
Comment 1•7 years ago
|
||
This is what happened: 1. we skip the if block for mPlayState is not playing at [1] 2. StopAudioThread() is called 3. mPlayState becomes playing and we enter the if block. 4. We hit the assertion at [2] for mAudioSink is null and mAudioCompleted is true. [1] https://hg.mozilla.org/integration/mozilla-inbound/annotate/accaecdd989d/dom/media/MediaDecoderStateMachine.cpp#l2420 [2] https://hg.mozilla.org/integration/mozilla-inbound/annotate/accaecdd989d/dom/media/MediaDecoderStateMachine.cpp#l3083
Assignee | ||
Comment 2•7 years ago
|
||
Try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=117dd7af3047
Assignee | ||
Comment 3•7 years ago
|
||
Only stop audio sink when we really finish playback.
Updated•7 years ago
|
Attachment #8636916 -
Flags: review?(kinetik) → review+
Assignee | ||
Comment 4•7 years ago
|
||
Thanks for the review.
Comment 6•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/934dcc90d4ac
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in
before you can comment on or make changes to this bug.
Description
•