Bug 1185416 - Don't stop AudioSink prematurely when decoding is completed. r=kinetik.